--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
         "phpunit/phpunit": "^8.5"
     },
     "config": {
+        "platform": {
+            "php": "7.3.13"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
