--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "nunomaduro/larastan": "^0.5.2",
-        "sentry/sentry-laravel": "^1.7"
+        "sentry/sentry-laravel": "^1.7",
+        "tightenco/ziggy": "^0.9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
