--- a/static/control/mix-manifest.json
+++ b/static/control/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/index.js": "/js/index.js?id=567bd8a7b7b7832c57d5",
-    "/theme/theme.css": "/theme/theme.css?id=e569da8d0b973517a610",
-    "/css/font-awesome.min.css": "/css/font-awesome.min.css?id=feda974a77ea5783b8be",
-    "/theme/theme.js": "/theme/theme.js?id=de163a64603ad3927d60"
+    "/js/index.js": "/js/index.js",
+    "/theme/theme.css": "/theme/theme.css",
+    "/css/font-awesome.min.css": "/css/font-awesome.min.css",
+    "/theme/theme.js": "/theme/theme.js"
 }
