--- a/static/control/mix-manifest.json
+++ b/static/control/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/index.js": "/js/index.js",
-    "/theme/theme.css": "/theme/theme.css",
-    "/css/font-awesome.min.css": "/css/font-awesome.min.css",
-    "/theme/theme.js": "/theme/theme.js"
+    "/js/index.js": "/js/index.js?id=e97986bccfb2d3c222fc",
+    "/theme/theme.css": "/theme/theme.css?id=1d34af21cfbd665776d5",
+    "/css/font-awesome.min.css": "/css/font-awesome.min.css?id=feda974a77ea5783b8be",
+    "/theme/theme.js": "/theme/theme.js?id=de163a64603ad3927d60"
 }
